# CPP_features

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Readme.md  Redme.md  main.cpp
DynamicMemAlocation/: DynamicMemAlocation.hpp
Functor and Lambda/: functorAndLambda.hpp
InteligentPointers/: InteligentPointers.hpp
SelectedDesignPatterns/ConstructPatterns/: AbstractFactory.hpp  Singleton.hpp
SelectedDesignPatterns/OperationalPatterns/: Observer.hpp
SelectedDesignPatterns/StructuralPatterns/: Composite.hpp  Decorator.hpp
Template/: template.hpp
configuration/: Dockerfile  build_image.sh  run_container.sh
src/: CMakeLists.txt  main.cpp
src/Cpp11/CPP_Constructors/: CPP_Constructors.hpp
src/Cpp11/Inheritance/: Inheritance.hpp
src/Cpp14/: CMakeLists.txt  config.cmake  main.cpp
src/Cpp14/CPP_Cast/: CPP_cast.hpp
src/Cpp14/CPP_Constructors/: CPP_Constructors.hpp
src/Cpp14/FeaturesOfCpp11/: cpp11_features.hpp
src/Cpp14/Functor and Lambda/: functorAndLambda.hpp
src/Cpp14/InteligentPointers/: InteligentPointers.hpp
src/Cpp14/SelectedDesignPatterns/OperationalPatterns/: ChainOfResponsibility.hpp
src/Cpp14/SelectedDesignPatterns/StructuralPatterns/: Composite.hpp
src/Cpp14/Template/: template.hpp
src/Cpp17/: CMakeLists.txt
src/Cpp17/config/: clang-format.cmake  config.cmake  cppcheck.cmake
src/Cpp17/source/: CMakeLists.txt  main.cpp
src/Cpp17/source/advanced_algorithms/: CMakeLists.txt  advanced_algorithms.cpp  advanced_algorithms.h
src/Cpp17/source/algorithms/: CMakeLists.txt  algorithms.cpp  algorithms.h
src/Cpp17/source/file_systems/: CMakeLists.txt  file_changer.cpp  file_cleaner.cpp  file_systems.cpp  file_systems.h  filesizes_stats.cpp  grep.cpp  ls_tool.cpp
src/Cpp17/source/iterators/: CMakeLists.txt  iterators.cpp  iterators.h
src/Cpp17/source/lambda/: CMakeLists.txt  lambda.cpp  lambda.h
src/Cpp17/source/map/: CMakeLists.txt  map.cpp  map.h
src/Cpp17/source/multimap/: CMakeLists.txt  multimap.cpp  multimap.h
src/Cpp17/source/new_features_cpp17/: CMakeLists.txt  automatic_template.hpp  constexpr-if.hpp  folding.hpp  inline_static_class.hpp  structural_binding.hpp  variable_range_limitation.hpp  way_of_initialization.hpp
src/Cpp17/source/parallel_processing/: CMakeLists.txt  parallell_processing.cpp  parallell_processing.h
src/Cpp17/source/queue/: CMakeLists.txt  queue.cpp  queue.h
src/Cpp17/source/set/: CMakeLists.txt  set.cpp  set.h
src/Cpp17/source/stack/: CMakeLists.txt  stack.cpp  stack.h
src/Cpp17/source/strings/: CMakeLists.txt  city_database.txt  file.html  strings.cpp  strings.h
src/Cpp17/source/traits/: CMakeLists.txt  traits.cpp  traits.h
src/Cpp17/source/unordered_map/: CMakeLists.txt  unordered_map.cpp  unordered_map.h
src/Cpp17/source/vector/: CMakeLists.txt  vector.cpp  vector.h
src/Cpp17/tests/: CMakeLists.txt  test.cpp
src/Cpp20/: CMakeLists.txt
src/Cpp20/config/: clang-format.cmake  clang-tidy.cmake  config.cmake  cppcheck.cmake
src/Cpp20/source/: CMakeLists.txt  main.cpp
src/Cpp20/source/chaiscript/: CMakeLists.txt  chai.cpp  chai.hpp  example_script.chai  main.cpp
src/Cpp20/source/concepts/: CMakeLists.txt  concepts.cpp  concepts.hpp
src/Cpp20/source/constant_expressions/: CMakeLists.txt  constant_expressions.cpp  constant_expressions.hpp
src/Cpp20/source/creationMechanisms/: CMakeLists.txt  creation.cpp  creation.hpp
src/Cpp20/source/idioms/: CMakeLists.txt  idioms.cpp  idioms.hpp
src/Cpp20/source/modules/: CMakeLists.txt  modules.cpp  modules.hpp
src/Cpp20/source/modules/example_module/: CMakeLists.txt  example_module.cppm
src/Cpp20/source/move_semantic/: CMakeLists.txt  move_semantic.cpp  move_semantic.hpp
src/Cpp20/source/multilang_string/: CMakeLists.txt  en_us.csv  multilang_string.cpp  multilang_string.hpp  pl.csv
src/Cpp20/source/spaceship/: CMakeLists.txt  spaceship.cpp  spaceship.hpp
src/Cpp20/tests/: CMakeLists.txt  test.cpp
